# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-18 22:48:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-90

    Summary:
      Backed out patch-82 through patch-89; going back to separate lexer
    Revision:
      missingh--head--0.5--patch-90


    new files:
     libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs

    removed files:
     libsrc/MissingH/ConfigParser/Parser.hs

    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-18 22:13:17 GMT	John Goerzen <jgoerzen@complete.org>	patch-89

    Summary:
      More code reduction
    Revision:
      missingh--head--0.5--patch-89


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-18 22:06:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-88

    Summary:
      Removed obsolete code
    Revision:
      missingh--head--0.5--patch-88


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-18 22:04:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-87

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-87


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Parsertest.hs


2004-11-18 21:54:38 GMT	John Goerzen <jgoerzen@complete.org>	patch-86

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-86


    modified files:
     ChangeLog


2004-11-18 21:54:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-85

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-85


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-18 21:50:51 GMT	John Goerzen <jgoerzen@complete.org>	patch-84

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-84


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs