@@ -23,25 +23,33 @@ import Testutil
 import Control.Exception
 
 test_basic =
-    let f msg inp exp = assertEqual msg exp (parse_string inp) in
-        do
+    let f msg inp exp = TestLabel msg $ TestCase $ assertEqual "" exp (parse_string inp) in
+        [
         f "empty string" "" []
-        f "one empty line" "\n" []
-        f "one comment line" "#foo bar" []
-        f "one comment line with eol" "#foo bar\n" []
-        f "one empty section" "[emptysect]" [("emptysect", [])]
-        f "comment and empty sect" "#foo bar\n[emptysect]\n" [("emptysect", [])]
-        f "comments2" "# [nonexistant]\n[emptysect]\n" [("emptysect", [])]
-        f "comments3" "#fo\n[Cemptysect]\n#asdf boo\n  \n  # fnonexistantg"
+
+        ,f "one empty line" "\n" []
+        ,f "one comment line" "#foo bar" []
+        ,f "one comment line with eol" "#foo bar\n" []
+        ,f "one empty section" "[emptysect]" [("emptysect", [])]
+        ,f "one empty section w/eol" "[emptysect]\n" [("emptysect", [])]
+        ,f "comment and empty sect noeol" "#foo bar\n[emptysect]"
+           [("emptysect", [])]
+        ,f "comment and empty sect" "#foo bar\n[emptysect]\n" [("emptysect", [])]
+        ,f "comments2" "# [nonexistant]\n[emptysect]\n" [("emptysect", [])]
+        ,f "comments3" "#fo\n[Cemptysect]\n#asdf boo\n  \n  # fnonexistantg"
           [("Cemptysect", [])]
-        f "comments4" "[emptysect]\n# [nonexistant]\n" [("emptysect", [])]
-        f "simple section" "[sect1]\nfoo: bar\n" [("sect1", [("foo", "bar")])]
-        f "comments5" "\n#foo\n[sect1]\n\n#iiii \no1: v1\no2:  v2\n o3: v3"
+        ,f "comments4" "[emptysect]\n# [nonexistant]\n" [("emptysect", [])]
+        ,f "simple section" "[sect1]\nfoo: bar\n" [("sect1", [("foo", "bar")])]
+        ,f "comments5" "\n#foo\n[sect1]\n\n#iiii \no1: v1\no2:  v2\no3: v3"
+          [("sect1", [("o1", "v1"), ("o2", "v2"), ("o3", "v3")])]
+        ,f "comments5ext" "\n#foo\n[sect1]\n\n#iiii \no1: v1\no2:  v2\n o3: v3"
+          [("sect1", [("o1", "v1"), ("o2", "v2\no3: v3")])]
+        ,f "comments5eol" "\n#foo\n[sect1]\n\n#iiii \no1: v1\no2:  v2\no3: v3\n"
           [("sect1", [("o1", "v1"), ("o2", "v2"), ("o3", "v3")])]
 
-        f "default1" "v1: o1\n[sect1]\nv2: o2" [("DEFAULT", [("v1", "o1")]),
+        ,f "default1" "v1: o1\n[sect1]\nv2: o2" [("DEFAULT", [("v1", "o1")]),
                                      ("sect1", [("v2", "o2")])]
-        f "simple default" "foo: bar" [("DEFAULT", [("foo", "bar")])]
+        ,f "simple default" "foo: bar" [("DEFAULT", [("foo", "bar")])]
 {-
         assertRaises "e test1" (ErrorCall "Lexer: \"(string)\" (line 1, column 5):\nunexpected \"\\n\"\nexpecting Option separator")
                       (f "" "#foo\nthis is bad data" [])
@@ -49,6 +57,7 @@ test_basic =
         assertRaises "e test2" (ErrorCall "Lexer: \"(string)\" (line 2, column 9):\nunexpected \"\\n\"\nexpecting Option separator")
                      (f "" "[sect1]\n#iiiiii \n  extensionline\n#foo" [])
 -}
+        ]
 
 test_extensionlines =
     let f inp exp = exp @=? parse_string inp in
@@ -58,6 +67,6 @@ test_extensionlines =
                       ("baz", "l1\nl2\nl3"),
                       ("quux", "asdf")])]
 
-tests = TestList [TestLabel "test_basic" (TestCase test_basic),
-                  TestLabel "test_extensionlines" (TestCase test_extensionlines)
+tests = TestList [TestLabel "test_basic" (TestList test_basic)
+--                  TestLabel "test_extensionlines" (TestCase test_extensionlines)
                  ]
