@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-18 22:53:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-91
+
+    Summary:
+      Updated test for parse problem
+    Revision:
+      missingh--head--0.5--patch-91
+
+
+    modified files:
+     ChangeLog testsrc/ConfigParser/Parsertest.hs
+
+
 2004-11-18 22:48:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-90
 
     Summary:
